--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,16 +1,14 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
 	font-family: 'Lato', "sans-serif", "Arial";
-	/*font-size: 2.0vw;*/
-	/*font-weight: 300;*/
 	text-rendering: optimizeLegibility;
-	/*color: #555555;*/
+	color: #555555;
 	overflow-x: hidden;
 }
 
