--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,4 +1,3 @@
-
 .btn {
   display: inline-block;
   padding: .75rem 2rem;
@@ -9,6 +8,15 @@
   letter-spacing: 2.0px;
   border-radius: 5px;
   transition: background-color 0.2s, border 0.2s, color 0.2s;
-  font-weight: 500;
+  font-weight: 400;
   vertical-align: middle;
+  border: 2px solid $mainGreen;
+
+  &__full {
+    &:hover {
+      background-color: transparent;
+      border: 2px solid $mainGreen;
+      color: $mainGreen;
+    }
+  }
 }
