--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -22,4 +22,10 @@
       display: table;
     }
   }
+
+  @define-mixin atMinHeight {
+    @media(max-height: 350px) {
+      @mixin-content;
+    }
+  }
 }
