--- a/app/assets/styles/modules/_large_hero.css
+++ b/app/assets/styles/modules/_large_hero.css
@@ -7,29 +7,33 @@
     /*background-position: center;*/
     /*background-attachment: fixed;*/
   }
+
   &__text-content {
     position: absolute;
     top: 45%;
+    padding-top: 80px;
     transform: translateY(-60%);
     left: 0;
     width: 100%;
     text-align: center;
+
+    @mixin atMedium {
+      padding-top: 60px;
+    }
   }
   &__title {
     font-weight: 300;
     text-transform: uppercase;
     color: #ffffff;
     font-size: 2.8rem;
+    padding-top: 80px;
 
     @mixin atSmall {
       font-size: 3.2rem;
-      padding: 0 5px 0 5px;
     }
 
     @mixin atMedium {
       font-size: 4.5rem;
-      padding: 0 20px 0 20px;
-
     }
 
     @mixin atLarge {
