--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -8,7 +8,8 @@
   letter-spacing: 2.0px;
   border-radius: 5px;
   transition: background-color 0.2s, border 0.2s, color 0.2s;
-  font-weight: 400;
+  font-weight: 300;
+  font-size: 1.2rem;
   vertical-align: middle;
   border: 2px solid $mainGreen;
 
