--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -2,6 +2,8 @@
   padding-left: 18px;
   padding-right: 18px;
   max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 
   &--medium {
     max-width: 975px;
