Add portfolio section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,3 +7,7 @@
 @import "modules/_wrapper";
 @import "modules/_site-header";
 @import "modules/_primary-nav";
+@import "modules/_row";
+@import "modules/_headline";
+@import "modules/_portfolio-item";
+@import "modules/_generic-content-container";
