--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -5,7 +5,7 @@
   &--main-title:after {
     display: block;
     height: 2px;
-    background-color: #39e7e0;
+    background-color: $mainBlue;
     content: " ";
     width: 110px;
     margin: 0 auto;
@@ -26,8 +26,8 @@
     font-size: 1.3rem;
     padding-bottom: 5px;
     margin-top: 1em;
-    margin-bottom: .4rem;
-    border-bottom: 5px solid #1cf06d;
+    margin-bottom: 4.4rem;
+    border-bottom: 5px solid $mainBlue;
   }
 
   &--description {
@@ -35,5 +35,6 @@
     font-family: sans-serif;
     margin-bottom: 1.2em;
     max-width: 500px;
+    font-size: 1.1rem;
   }
 }
