--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -6,18 +6,31 @@
   color: $mainGreen;
   text-decoration: none;
   letter-spacing: 2.0px;
-  border-radius: 5px;
-  transition: background-color 0.2s, border 0.2s, color 0.3s;
-  font-weight: 300;
+  border-radius: 2px;
+  transition: background-color 0.3s, border 0.3s, color 0.3s;
+  font-weight: 700;
   font-size: 1.2rem;
   vertical-align: middle;
-  border: 2px solid $mainGreen;
+  border: 1px solid $mainGreen;
 
   &__full {
     &:hover {
-      background-color: $mainGreen;
-      border: 2px solid $mainGreen;
-      color: #ffffff;
+      border: 1px solid #0dcc56;
+      /*color: #0dcc56;*/
+      /*background-color: $mainGreen;*/
+    }
+  }
+
+  &__about {
+    /*display: block;*/
+    padding: 5px 40px;
+    margin: 20px auto;
+
+    @mixin atMedium {
+      padding: 0 80px;
+    }
+    &:hover {
+      color: #0dcc56;
     }
   }
 }
