--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,3 +11,5 @@
 @import "modules/_headline";
 @import "modules/_portfolio-item";
 @import "modules/_generic-content-container";
+@import "modules/_about";
+@import "modules/_site-footer";
