--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -2,7 +2,13 @@
   position: absolute;
   padding: 10px 0;
   width: 100%;
-  z-index: 50;
+  z-index: 4;
+  transition: background-color .3s ease-out;
+
+  &--is-expanded {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding-bottom: 50px;
+  }
 
   &__logo {
     position: absolute;
@@ -29,15 +35,90 @@
     margin-bottom: 60px;
   }
 
-  &__menu-content {
-    display: none;
+  &__menu-icon {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    z-index: 50;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transform-origin: 0 0;
+      transition: transform .3s ease-out;
+    }
+
+    &__middle {
+      position: absolute;
+      top: 8px;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transition: all .3s ease-out;
+      transform-origin: 0 50%;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transform-origin: 0 100%;
+      transition: transform .3s ease-out;
+    }
 
     @mixin atMedium {
-      display: block;
+      display: none;
     }
   }
 
-  &__pad {
+  &__menu-icon--close-x {
+    &::before {
+      transform: rotate(45deg) scaleX(1.25);
+    }
+
+    .site-header__menu-icon__middle {
+      opacity: 0;
+      transform: scaleX(0);
+    }
+
+    &::after {
+      transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+    }
+  }
+
+  &__menu-content {
     position: relative;
+    display: block;
+    opacity: 0;
+    z-index: -10;
+    padding-top: 60px;
+    text-align: center;
+    transform: scale(1.2);
+    transition: all .3s ease-out;
+
+    @mixin atMedium {
+      opacity: 1;
+      z-index: 1;
+      padding-top: 0;
+      transform: scale(1);
+    }
+
+    &--is-visible {
+      opacity: 1;
+      z-index: 1;
+      transform: scale(1);
+    }
   }
 }
