Add OnScroll class

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,3 +13,4 @@
 @import "modules/_generic-content-container";
 @import "modules/_about";
 @import "modules/_site-footer";
+@import "modules/_reveal-item";
