--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -31,6 +31,12 @@
     font-size: 1.3rem;
     padding: 10px 0;
     text-transform: uppercase;
+
+    @mixin atMedium {
+      &.is-current-link {
+        color: black;
+      }
+    }
   }
 
   span {
