--- a/app/assets/styles/modules/_portfolio-item.css
+++ b/app/assets/styles/modules/_portfolio-item.css
@@ -2,17 +2,18 @@
   /*position: relative;*/
   margin-left: auto;
   margin-right: auto;
-   /*> img {
-    margin: 0 auto;
-    overflow: hidden;
-  }*/
+
+   @mixin atMedium {
+     margin-bottom: -80px;
+   }
 
   &__image {
-    width: 80%;
+    width: 60%;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
+    box-shadow: 1px 5px 5px rgba(55, 55, 55, 0.5);
 
     @mixin atMedium {
       height: 55%;
