--- a/app/assets/styles/modules/_large_hero.css
+++ b/app/assets/styles/modules/_large_hero.css
@@ -7,11 +7,15 @@
     /*background-size: cover;*/
     /*background-position: center;*/
     /*background-attachment: fixed;*/
+
+    @mixin atMinHeight {
+      min-height: 120vh;
+    }
   }
   &--color {
     background-color: #2CBADB;
   }
-  
+
   &--fixed {
     background-attachment: fixed;
   }
