--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -67,8 +67,9 @@
       width: 20px;
       height: 3px;
       background-color: #fff;
-      transform-origin: 0 0;
-      transition: transform .3s ease-out;
+      transform: scale(1);
+      transform-origin: 50% 50%;
+      transition: all .3s ease-out;
     }
 
     &__middle {
@@ -79,7 +80,16 @@
       height: 3px;
       background-color: #fff;
       transition: all .3s ease-out;
-      transform-origin: 0 50%;
+    }
+
+    &__middle-bottom {
+      position: absolute;
+      top: 8px;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #fff;
+      transition: all .3s ease-out;
     }
 
     &::after {
@@ -90,8 +100,9 @@
       width: 20px;
       height: 3px;
       background-color: #fff;
-      transform-origin: 0 100%;
-      transition: transform .3s ease-out;
+      transform: scale(1);
+      transform-origin: 50% 50%;
+      transition: all .3s ease-out;
     }
 
     @mixin atMedium {
@@ -101,16 +112,21 @@
 
   &__menu-icon--close-x {
     &::before {
-      transform: rotate(45deg) scaleX(1.25);
-    }
-
-    .site-header__menu-icon__middle {
       opacity: 0;
       transform: scaleX(0);
     }
 
+    .site-header__menu-icon__middle {
+      transform: rotate(400deg) scaleX(1.25);
+    }
+
+    .site-header__menu-icon__middle-bottom {
+      transform: rotate(-400deg) scaleX(1.25);
+    }
+
     &::after {
-      transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+      /* transform: rotate(-220deg) scaleX(1.25); */
+      transform: scaleX(0);
     }
   }
 
