--- a/app/assets/styles/modules/_portfolio-item.css
+++ b/app/assets/styles/modules/_portfolio-item.css
@@ -13,7 +13,7 @@
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-    box-shadow: 1px 5px 5px rgba(55, 55, 55, 0.5);
+    box-shadow: 0 5px 5px rgba(55, 55, 55, 0.5);
 
     @mixin atMedium {
       height: 55%;
