--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -40,7 +40,8 @@
     color: #000;
     border: 1px solid #000;
     background-color: rgba(255, 255, 255, 0.5);
-
+    cursor: pointer;
+    
     @mixin atMedium {
       padding: 0 80px;
       margin: 20px auto;
