--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -2,12 +2,14 @@
   position: absolute;
   padding: 10px 0;
   width: 100%;
+  height: 0%;
   z-index: 4;
-  transition: background-color .3s ease-out;
+  transition: all .3s ease-out;
 
   &--is-expanded {
       background-color: rgba(0, 0, 0, 0.7);
       padding-bottom: 50px;
+      height: 100%;
 
       @mixin atMedium {
         background-color: transparent;
